Increased window size to stop text overlap.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -64,11 +64,9 @@ a {
 
 .connection-status-banner {
     position: fixed;
-    /* top: 10px; */
-    /* left: 40%; */
     width: 100%;
-    height: 2%;
-    /* padding: 20px; */
+    height: 2.5%;
+    line-height: 150%;
     border-color: #d1d2d3;
     border-radius: 5px;
     z-index: 1042;
